--- a/paypal-landing-template-new/index.html
+++ b/paypal-landing-template-new/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>[公司名称] — 官方展示页</title>
+  <title>[Yangzhou OMiao International Trade Co,Ltd.] — 官方展示页</title>
   <meta name="description" content="[公司名称] 专注于 [主营产品/服务]，为全球客户提供优质产品与服务。">
   <style>
     body { font-family: Arial, sans-serif; margin:0; padding:0; line-height:1.6; }
@@ -19,15 +19,15 @@
 </head>
 <body>
   <header>
-    <h1>[公司名称]</h1>
-    <p>成立于 [年份] · 总部：[城市, 国家]</p>
+    <h1>[Yangzhou OMiao International Trade Co,Ltd.]</h1>
+    <p>成立于 [2024] · 总部：[Yangzhou, China]</p>
   </header>
 
   <div class="container">
     <section>
       <h2>关于我们</h2>
-      <p><strong>[公司名称]</strong> 成立于 <strong>[年份]</strong>，专注于 <strong>[主营产品/服务]</strong>。
-         我们服务全球客户，提供高品质产品与解决方案，业务覆盖 <strong>[主要国家/地区]</strong>。</p>
+      <p><strong>[Yangzhou OMiao International Trade Co,Ltd.]</strong> 成立于 <strong>[2024]</strong>，专注于 <strong>[Custom Plush Toys/Customized Printed Pillows/Customized Acrylic Keychains]</strong>。
+         我们服务全球客户，提供高品质产品与解决方案，业务覆盖 <strong>[United States/Japan/Singapore/Hong Kong/South Korea]</strong>。</p>
     </section>
 
     <section>
@@ -51,16 +51,16 @@
     <section>
       <h2>联系我们</h2>
       <dl>
-        <dt>公司名称</dt><dd>[公司名称]</dd>
-        <dt>邮箱</dt><dd>[联系邮箱]</dd>
-        <dt>电话</dt><dd>[国际区号 + 电话]</dd>
-        <dt>地址</dt><dd>[公司注册地址]</dd>
+        <dt>公司名称</dt><dd>[Yangzhou OMiao International Trade Co,Ltd.]</dd>
+        <dt>邮箱</dt><dd>[pianaijiuwo@gmail.com]</dd>
+        <dt>电话</dt><dd>[86 18252767673]</dd>
+        <dt>地址</dt><dd>[Unit 1303, XingZuo Building, No.330 Hanjiang Middle Road, YangZhou, JiangSu, China 225012]</dd>
       </dl>
     </section>
   </div>
 
   <footer>
-    <p>© [年份] [公司名称]. All rights reserved.</p>
+    <p>© [2024] [Yangzhou OMiao International Trade Co,Ltd.]. All rights reserved.</p>
   </footer>
 </body>
 </html>
